upgrades & removals
 - remove support for 2.9.x
 - bump scala to 2.10.6 and 2.11.8
 - bump sbt to 0.13.11